[package]
name = "cobblestone-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.37.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.8.5"
bincode = "1.3.3"
bytestring = "1.3.1"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
zstd = "0.13.1"
strum = { version = "0.26.2", features = ["derive"] }

# Internal
oxagworldgenerator = { version = "0.1.4", registry = "kellnr" }
robotics_lib = { version = "0.1.21", registry = "kellnr" }
roomba_robot_test = { git = "ssh://git@github.com/RustyPripyat/roomba_robot_test.git" }
common-messages = { git = "ssh://git@github.com/RustyPripyat/common-messages.git" }
robot-for-visualizer = { git = "ssh://git@github.com/RustyPripyat/robot-for-visualizer.git" }

# Actix
actix = "0.13.3"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web-actors = "4.3.0"
actix-web = "4.6.0"

# Robots
robotic_ai_prypiat = { git = "ssh://git@github.com/D35P4C1T0/Robotic-AI.git", branch = "lib" }