[package]
name = "exclusion_zone_world_generator"
version = "0.1.5"
edition = "2021"
authors = ["Marco Toniolo @Toniolo-Marco", "Federico Frigerio @FrostWalk"]
description = "Let your robot feel the vibes of Černobyl like in the 1986 USSR."
readme = "README.md"
repository = "https://github.com/RustyPripyat/World-Generator"
license-file = "LICENSE.txt"
keywords = ["world_generator"]
exclude = ["rustfmt.toml", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exclusion_zone"
path = "src/lib.rs"

[dependencies]
robotics_lib = { path = "../Robotic-Lib" }
rand = "0.8.5"
noise = "0.9.0"
rayon = "1.8.0"
voronator = "0.2.1"
nannou_core = "0.19.0"
serde = "1.0.193"
bincode = "1.3.3"
zstd = "0.13.0"
